# anime-subtitle-exchange

./: README.md  SKILL.md  pyproject.toml
examples/: aparida_demo.md  default_workflow.md
scripts/: __init__.py  extract_subtitle.py  mount_ass.py  subtitle_bridge.py
tests/: test_subtitle_bridge.py
